--- a/mitx/lms/static/sass/course/_course-about.scss
+++ b/mitx/lms/static/sass/course/_course-about.scss
@@ -56,24 +56,56 @@
 
                         .main-cta {
 
-                            a.register {
-                                @extend %btn;
-                                @include padding($baseline*0.6, $baseline, $baseline*0.55, $baseline);
-                                background: $primary;
-                                border-color: $primary;
-                                box-shadow: none;
-                                text-shadow: none;
-                                width: $baseline*13;
-                                border-radius: $border-radius;
+                            a {
+                                display: block;
+                                @include clearfix;
 
-                                &:hover {
-                                    background: darken($primary, 5%);
-                                    border-color: darken($primary, 5%);
+                                span.register {
+                                    float:none;
+                                    margin-bottom: 5px;
+                                    padding: 5px;
+
+                                    + strong {
+                                        @extend %btn;
+                                        @include padding($baseline*0.6, $baseline, $baseline*0.55, $baseline);
+                                        background: $primary;
+                                        border-color: $primary;
+                                        box-shadow: none;
+                                        text-shadow: none;
+                                        width: $baseline*13;
+                                        border-radius: $border-radius;
+
+                                        &:hover {
+                                            background: darken($primary, 5%);
+                                            border-color: darken($primary, 5%);
+                                        }
+
+                                        &:active,
+                                        &:focus {
+                                            box-shadow: none;
+                                        }
+                                    }
                                 }
 
-                                &:active,
-                                &:focus {
+                                &.register {
+                                    @extend %btn;
+                                    @include padding($baseline*0.6, $baseline, $baseline*0.55, $baseline);
+                                    background: $primary;
+                                    border-color: $primary;
                                     box-shadow: none;
+                                    text-shadow: none;
+                                    width: $baseline*13;
+                                    border-radius: $border-radius;
+
+                                    &:hover {
+                                        background: darken($primary, 5%);
+                                        border-color: darken($primary, 5%);
+                                    }
+
+                                    &:active,
+                                    &:focus {
+                                        box-shadow: none;
+                                    }
                                 }
                             }
                         }
