--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -107,6 +107,10 @@
 
                             &:hover {
                                 background-color: $ice-blue;
+
+                                a {
+                                    color: $primary;
+                                }
                             }
                         }
                     }
