Add styling for login register page.

--- a/mitx/lms/static/sass/base/_reset.scss
+++ b/mitx/lms/static/sass/base/_reset.scss
@@ -1,22 +1,8 @@
-html,
-body {
-    height: 100%;
-    font-family: $font-family-sans-serif;
-
-    // Sticky footer rules
-    .window-wrap {
-        display: flex;
-        height: 100%;
-        min-height: 100%;
-        flex-direction: column;
-
-        .content-wrapper {
-            flex: 1;
-        }
-    }
-}
-
 html {
+    height: auto;
+    min-height: 100%;
+    max-height: inherit;
+    position: relative;
     overflow: auto !important;
 }
 
@@ -24,6 +10,19 @@ body {
     background: $body-bg;
     color: $charcoal-gray;
     overflow: initial !important;
+    font-family: $font-family-sans-serif;
+}
+
+// Sticky footer rules
+.window-wrap {
+    display: flex;
+    height: 100%;
+    min-height: 100%;
+    flex-direction: column;
+
+    .content-wrapper {
+        flex: 1;
+    }
 }
 
 #main,
@@ -48,7 +47,7 @@ body.view-in-course .content-wrapper,
 .content-wrapper {
 
     .container {
-        @include padding($baseline*3, 0, $baseline*5, 0);
+        @include padding($baseline*3, $baseline*0.75, $baseline*5, $baseline*0.75);
     }
 }
 
