--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -29,7 +29,8 @@ $gray-pale:             #f4f6fa;
 $light-gray-blue:		#b0bec5;
 $charcoal-gray:			#37474f;
 $navy:                  #03152d;
-$navy-50:               rgba(3, 21, 45, 0.50);
+$navy-35:               rgba(3, 21, 45, 0.35);
+$navy-50-solid:			#697683;
 $navy-80:               rgba(3, 21, 45, 0.80);
 $navy-90:               rgba(3, 21, 45, 0.90);
 $navy-90-solid:			#1d2c42;
