--- a/mitx/lms/static/sass/base/_reset.scss
+++ b/mitx/lms/static/sass/base/_reset.scss
@@ -1,28 +1,30 @@
+html,
+body {
+    height: 100%;
+    overflow: auto;
+
+    // Sticky footer rules
+    .window-wrap {
+        display: flex;
+        min-height: 100%;
+        flex-direction: column;
+
+        .content-wrapper {
+            flex: 1;
+            position: relative;
+            z-index: 2;
+        }
+    }
+}
+
 html {
-    height: auto;
-    min-height: 100%;
-    max-height: inherit;
-    position: relative;
     overflow: auto !important;
 }
 
 body {
     background: $body-bg;
     color: $charcoal-gray;
-    overflow: initial !important;
     font-family: $font-family-sans-serif;
-}
-
-// Sticky footer rules
-.window-wrap {
-    display: flex;
-    height: 100%;
-    min-height: 100%;
-    flex-direction: column;
-
-    .content-wrapper {
-        flex: 1;
-    }
 }
 
 #main,
@@ -41,7 +43,7 @@ body.view-in-course .content-wrapper,
 
 #main {
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 .content-wrapper {
