--- a/mitx/lms/static/sass/lms-main-v2.scss
+++ b/mitx/lms/static/sass/lms-main-v2.scss
@@ -23,6 +23,7 @@ $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 // THEME SASS FILES
 // ------------------------------
 // base - utilities
+@import 'base/mixins';
 @import 'base/mixins-breakpoints';
 @import 'base/typography';
 @import 'base/reset';
@@ -30,6 +31,7 @@ $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 // Components / Shared-v2
 @import 'shared-v2/header';
 @import 'shared-v2/footer';
+@import 'shared-v2/forms';
 
 // Elements
 @import 'elements-v2/buttons';
