--- a/mitx/lms/static/sass/views/_login-register.scss
+++ b/mitx/lms/static/sass/views/_login-register.scss
@@ -1,16 +1,14 @@
 // =================================
 // lms - views - login/register view
 // =================================
-.login-register-page {
+.login-register-view {
 
-    .section-bkg-wrapper {
+    .content-wrapper {
         background-image: url('#{$static-path}/images/bg-login-register.jpg');
         background-color: $navy;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 100%;
-        position: relative;
 
         &:after {
             content: '';
@@ -19,7 +17,9 @@
             height: 100%;
             position: absolute;
             left: 0;
+            right: 0;
             top: 0;
+            bottom: 0;
             z-index: 1;
         }
     }
@@ -35,12 +35,13 @@
     }
 
     #login-and-registration-container {
-        @include margin($baseline*6.25, 0, $baseline, $baseline*4.25);
+        @include margin($baseline*6.25, 0, $baseline*6.25, $baseline*4.25);
         background: $body-bg;
 
         .login-register-view & {
             background: $body-bg;
             width: 450px;
+            padding: 0;
         }
 
         .form-type {
@@ -53,21 +54,169 @@
                 -moz-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .1);
                 -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .1);
 
+                h2,
+                .form-title {
+                    color: $charcoal-gray;
+                    font-family: $font-source-sans-pro;
+                    font-weight: normal;
+                    letter-spacing: 0.28px;
+                }
+
+                .form-title {
+                    font-size: 32px;
+                    @include margin(0, 0, $baseline*1.5, 0);
+                }
+
                 form {
 
                     .form-field {
-                        @include margin($baseline, 0, 0, 0);
+                        position: relative;
+                        @include clearfix;
+                        @include margin(0, 0, $baseline, 0);
 
+                        label,
                         .input-block {
-                            box-shadow: none;
-                            border-radius: $border-radius;
+                            font-family: $font-source-sans-pro;
                         }
 
                         label {
+                            background: $white;
+                            opacity: 1;
+                            font-size: 14px;
+                            font-weight: normal;
+                            color: $blue-gray;
+                            left: $baseline*0.75;
+                            top: $baseline*0.6;
+                            padding: 0;
+                            @include transition(all 0.15s);
 
                             &[for='toggle_optional_fields'],
                             &[for='register-terms_of_service'] {
                                 font-size: 14px;
+                            }
+
+                            &.focus-in {
+                                border: none;
+                                opacity: 1;
+                                font-size: 13px;
+                                padding: $baseline*0.25;
+                                position: absolute;
+                                left: $baseline*0.75;
+                                top: -($baseline*0.75);
+                            }
+
+                            &.error {
+                                color: $primary;
+                            }
+
+                            &.success {
+                                color: $success;
+                            }
+                        }
+
+                        .input-block:not([type="checkbox"]):not([type="radio"]) {
+                            box-shadow: none;
+                            border-radius: $border-radius;
+                            border-color: $bluey-gray;
+                            height: 46px;
+                            padding: ($baseline/4) $baseline;
+                            font-family: $font-roboto;
+                            font-weight: normal;
+
+                            &.error {
+                                border-color: $primary;
+                            }
+
+                            &:focus {
+                                border-color: $secondary;
+                                box-shadow: 0 0 0 1px $secondary;
+                                outline: none;
+                            }
+                        }
+
+                        textarea {
+                            height: 100px;
+                        }
+
+                        .tip {
+                            font-size: 12px;
+                            color: $bluey-gray;
+
+                            &.error {
+                                color: $primary;
+                            }
+
+                            &.tip-input {
+                                color: $bluey-gray;
+                            }
+                        }
+
+                        .forgot-password {
+                            color: $secondary;
+                            float: right;
+                            font-size: 14px;
+
+                        }
+
+                        .plaintext-field {
+                            color: $charcoal-gray;
+                            font-size: 14px;
+                            font-weight: normal;
+                            font-family: $font-source-sans-pro;
+                            letter-spacing: 0.3px;
+                            @include margin($baseline*1.5, 0, $baseline*1.5, 0);
+                        }
+
+                        &[class*="checkbox-"] {
+                            @include margin($baseline, 0, $baseline*1, 0);
+
+                            label {
+                                color: $charcoal-gray;
+                                font-family: $font-roboto;
+                                font-weight: normal;
+                                position: relative;
+                                left: 0;
+                                top: 0;
+                            }
+                        }
+
+                        &.checkbox-remember {
+                            margin: 0;
+                            top: -($baseline);
+                        }
+
+                        &[class*="select-"] {
+                            position: relative;
+
+                            select {
+                                -webkit-appearance: none;
+                                -moz-appearance: none;
+                                appearance: none;
+                                background: $white;
+                                border: 1px solid $bluey-gray;
+                                border-radius: $border-radius;
+                                font-family: $font-roboto;
+                                margin: 0;
+                                opacity: 1;
+                                @include padding($baseline*0.25, $baseline*1.25, $baseline*0.25, $baseline);
+                                outline: none;
+                                height: 46px;
+
+                                &.error {
+                                    border-color: $primary;
+                                }
+                            }
+
+                            &:after {
+                                content: '';
+                                width: 0;
+                                height: 0;
+                                border-left: 4px solid transparent;
+                                border-right: 4px solid transparent;
+                                border-top: 4px solid $blue-gray;
+                                position: absolute;
+                                right: 15px;
+                                top: 22px;
                             }
                         }
 
@@ -84,13 +233,41 @@
                     box-shadow: none;
                     background: $primary;
                     border-color: $primary;
+                    border-radius: $border-radius;
+                    font-family: $font-roboto;
+                    font-size: 16px;
+                    font-weight: 500;
+                    @include margin($baseline, 0, $baseline*1.5, 0);
 
                     &:hover {
                         background: darken($primary, 5%);
                         border-color: darken($primary, 5%);
                     }
                 }
+
+                .toggle-form {
+                    color: $charcoal-gray;
+                    font-size: 18px;
+
+                    .form-toggle {
+                        color: $secondary;
+                        text-decoration: none;
+
+                        &:hover {
+                            color: $primary;
+                        }
+                    }
+                }
             }
         }
+    }
+}
+
+.login-form,
+.password-reset-form {
+
+    label {
+        display: inline-block !important;
+        padding: 0 5px !important;
     }
 }
