--- a/mitx/lms/templates/student_account/login_and_register.html
+++ b/mitx/lms/templates/student_account/login_and_register.html
@@ -10,6 +10,7 @@
 <%inherit file="../main.html" />
 
 <%block name="pagetitle">${_("Sign in or Register")}</%block>
+<%block name="bodyclass">login-register-view</%block>
 
 <%block name="js_extra">
     <%static:require_module module_name="js/student_account/logistration_factory" class_name="LogistrationFactory">
