--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -46,6 +46,8 @@ $blue-gray-70:          rgba(144, 164, 174, 0.70);
 $ice-blue:              #eceff1;
 $ice-blue-60:           rgba(236, 239, 241, 0.6);
 $ice-blue-60-solid:     #f4f5f7;
+$tomato:               	#ee2d2d;
+$danger:               	$tomato;
 $success:               #008100;
 
 // Misc.
