--- a/mitx/lms/static/sass/shared-v2/_forms.scss
+++ b/mitx/lms/static/sass/shared-v2/_forms.scss
@@ -17,7 +17,9 @@ input[type="tel"] {
     border: 1px solid $bluey-gray;
     border-radius: $border-radius;
     box-shadow: none;
+    color: $charcoal-gray;
     height: 46px;
+    min-width: 235px;
     font-family: $font-roboto;
     font-size: 14px;
     padding: ($baseline/4) $baseline;
@@ -38,10 +40,12 @@ input[type="tel"] {
 
 select {
     background: $white;
-    border-color: $bluey-gray;
+    border-color: $bluey-gray !important;
     height: 46px;
     outline: none;
     font-family: $font-roboto;
+    font-weight: normal !important;
+    min-width: 235px;
 }
 
 textarea {
@@ -58,6 +62,7 @@ button,
     vertical-align: top;
     font-family: $font-source-sans-pro;
     font-size: 14px;
+    min-width: 235px;
 
     &:disabled,
     &.is-disabled,
