--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -29,7 +29,8 @@
 
                     .tab-nav-link {
                         border-width: 2px;
-                        @include padding($baseline*0.5, 0, $baseline*0.5, 0);
+                        color: $charcoal-gray;
+                        @include padding($baseline*0.2, 0, $baseline*0.5, 0);
                     }
                 }
             }
