--- a/mitx/lms/static/sass/views/_account-settings.scss
+++ b/mitx/lms/static/sass/views/_account-settings.scss
@@ -9,22 +9,277 @@
 
 // +Container - Account Settings
 .wrapper-account-settings {
+    background: $white;
+    width: 100%;
 
-    .account-settings-sections {
+    .account-settings-container {
+        max-width: grid-width(8);
+        @include padding(0, $baseline*0.75, 0, $baseline*0.75);
+        margin: 0;
 
-        .section {
+        a {
+            color: $secondary;
 
-            .account-settings-section-body {
+            &:focus,
+            &:hover {
+                outline: none;
+                color: $primary;
+            }
 
-                .u-field {
+            &:visited {
+                color: $secondary;
+            }
+        }
+    }
+}
 
-                    .field {
+.wrapper-account-settings {
+    color: $charcoal-gray;
+    font-family: $font-source-sans-pro;
 
+    .account-settings-container {
+        padding: 0;
+
+        .wrapper-header {
+            border: none;
+
+            .header-title {
+                font-family:inherit;
+                font-size: 32px;
+                font-weight: normal;
+                letter-spacing: 0.28px;
+                margin-bottom: $baseline;
+            }
+
+            .account-nav {
+
+                .account-nav-link {
+                    border-bottom-width: 2px;
+                    color: inherit;
+                    font-size: 18px;
+                    font-weight: 600;
+                    letter-spacing: 0.5px;
+                    @include padding($baseline*0.25, 0, $baseline*0.5, 0);
+                    min-width: 0;
+                    @include margin-right($baseline*1.5);
+                    @include transition(all 0.3s);
+
+                    &.active {
+                        border-color: $primary;
                     }
 
-                    .u-field-message {
-                        // display: block;
-                        // @include padding-left(0);
+                    &:hover {
+                        border-bottom-color: $primary;
+                    }
+
+                    &:last-child {
+                        @include margin-right(0);
+                    }
+                }
+            }
+        }
+
+        .account-settings-sections {
+            @include margin($baseline*6.5, 0, $baseline, $baseline*5);
+
+            .section {
+                border-bottom: none;
+                margin: 0 0 ($baseline*6);
+
+                .section-header {
+                    font-family: inherit;
+                    font-size: 26px;
+                    letter-spacing: 0.23px;
+                }
+
+                .account-settings-header-subtitle {
+                    color: inherit;
+                    font-family: inherit;
+                    font-size: 18px;
+                    letter-spacing: 0.5px;
+                }
+
+                #account-deletion-container {
+
+                    .account-settings-header-subtitle {
+                        font-family: $font-source-sans-pro;
+                        font-size: 16px;
+                        letter-spacing: 0.44px;
+                        line-height: 24px;
+                        margin: ($baseline/4) 0;
+
+                        &:first-of-type {
+                            border-bottom: 4px solid $light-blue-gray;
+                            font-size: 18px;
+                            margin-bottom: $baseline*2;
+                            padding-bottom: $baseline;
+                        }
+                    }
+
+                    .account-settings-header-subtitle-warning {
+                        color: $tomato;
+                        font-family: $font-source-sans-pro;
+                        font-size: 16px;
+                        letter-spacing: 0.44px;
+                        line-height: 24px;
+                        margin: ($baseline/4) 0;
+
+                        strong {
+                            font-weight: 600;
+
+                            &:last-of-type {
+                                font-weight: normal;
+                            }
+                        }
+                    }
+                }
+
+                .account-settings-section-body {
+                    border-top: 5px solid $light-blue-gray;
+
+                    .u-field {
+                        padding: ($baseline) 0;
+                        border-bottom: 1px solid $light-blue-gray;
+                        @include media-up(sm) {
+                            padding: ($baseline*2) 0;
+                        }
+
+                        .field {
+
+                            select {
+                                border-radius: $border-radius;
+                                border-color: $bluey-gray;
+                                width: 235px;
+                                @include padding($baseline*.55, $baseline*1.5, $baseline*0.5, $baseline*0.75);
+
+                                ~ .icon-caret-down {
+
+                                    &:after {
+                                        border-left: 5px solid transparent;
+                                        border-right: 5px solid transparent;
+                                        border-top: 5px solid $charcoal-gray;
+                                        left: 210px;
+                                        right: auto;
+                                    }
+                                }
+                            }
+                        }
+
+                        .field-label {
+                            color: $charcoal-gray;
+                            font-family: inherit;
+                            font-size: 18px;
+                            font-weight: 600;
+                            letter-spacing: 0.5px;
+                            margin-bottom: $baseline !important;
+                        }
+
+                        .u-field-value {
+                            display: inline-block;
+                            padding: 0;
+                            width: auto;
+                            margin-bottom: $baseline*0.5;
+
+                            .field-input {
+                                background: $form-bg-color;
+                                border: 1px solid $bluey-gray;
+                                border-radius: $border-radius;
+                                box-shadow: none;
+                                color: $charcoal-gray;
+                                height: 46px;
+                                font-family: $font-roboto;
+                                font-size: 14px;
+                                @include padding($baseline*0.25, $baseline*0.75, $baseline*0.25, $baseline*0.75);
+                                vertical-align: top;
+                                width: 235px;
+                                -webkit-font-smoothing: antialiased;
+                                @include placeholder($blue-gray);
+
+                                &#field-input-name,
+                                &#field-input-email,
+                                &#field-input-social_links_twitter,
+                                &#field-input-social_links_facebook,
+                                &#field-input-social_links_linkedin {
+                                    width: 370px;
+                                }
+
+                                &:focus {
+                                    border-color: $secondary;
+                                    box-shadow: 0 0 0 1px $secondary;
+                                    outline: none;
+                                }
+                            }
+
+                            &#u-field-value-username {
+                                background: $gray-lightest;
+                                border: 1px solid #e0e0e0;
+                                border-radius: $border-radius;
+                                color: rgba(0, 0, 0, .4);
+                                font-size: 14px;
+                                min-width: 235px;
+                                @include padding($baseline*0.4, $baseline*0.5, $baseline*0.4, $baseline*0.5);
+                            }
+                        }
+
+                        .u-field-message {
+                            display: block;
+                            padding: 0;
+                            width: 100%;
+
+                            .u-field-message-notification {
+                                position: relative;
+                                display: block;
+                                padding: 0;
+
+                                .fa {
+                                    color: bluey-gray;
+                                    @include margin-right($baseline*0.25);
+                                }
+                            }
+
+                            .u-field-message-help {
+                                color: $bluey-gray;
+                                font-family: $font-source-sans-pro;
+                                font-size: 16px;
+                                line-height: 24px;
+                                letter-spacing: 0.44px;
+                            }
+                        }
+
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+
+                .u-field-link,
+                .btn-outline-primary {
+                    border-color: $primary !important;
+                    border-radius: $border-radius !important;
+                    color: $primary !important;
+                    font-family: $font-roboto !important;
+                    font-size: 14px !important;
+                    font-weight: 500 !important;
+                    letter-spacing: 0.5px !important;
+
+                    &:hover {
+                        background: $primary !important;
+                        color: $white !important;
+                    }
+
+                    &:focus {
+                        color: $primary !important;
+                        background: $white !important;
+                        box-shadow: none;
+                        outline: none;
+                    }
+                }
+
+
+                &:last-of-type {
+
+                    .account-settings-section-body {
+                        border-top-width: 0;
                     }
                 }
             }
