--- a/mitx/lms/static/sass/lms-main-v2.scss
+++ b/mitx/lms/static/sass/lms-main-v2.scss
@@ -25,6 +25,7 @@ $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 // base - utilities
 @import 'base/mixins';
 @import 'base/mixins-breakpoints';
+@import 'base/mitx-fontello';
 @import 'base/typography';
 @import 'base/reset';
 
