--- a/mitx/lms/static/sass/views/_login-register.scss
+++ b/mitx/lms/static/sass/views/_login-register.scss
@@ -6,8 +6,7 @@
     .content-wrapper {
         background-image: url('#{$static-path}/images/bg-login-register.jpg');
         background-color: $navy;
-        background-size: cover;
-        background-position: center;
+        background-position: center top;
         background-repeat: no-repeat;
 
         &:after {
