--- a/mitx/lms/templates/courseware/course_about.html
+++ b/mitx/lms/templates/courseware/course_about.html
@@ -237,13 +237,13 @@ from six import string_types
 
         <%block name="course_about_important_dates">
         <ol class="important-dates">
-          <li class="important-dates-item"><span class="icon fa fa-info-circle" aria-hidden="true"></span><p class="important-dates-item-title">${_("Course Number:")}</p><span class="important-dates-item-text course-number">${course.display_number_with_default}</span></li>
+          <li class="important-dates-item"><span class="fa fa-info-circle" aria-hidden="true"></span><p class="important-dates-item-title">${_("Course Number:")}</p><span class="important-dates-item-text course-number">${course.display_number_with_default}</span></li>
           % if not course.start_date_is_still_default:
               <%
                   course_start_date = course.advertised_start or course.start
               %>
             <li class="important-dates-item">
-              <span class="icon fa fa-calendar" aria-hidden="true"></span>
+              <span class="fa fa-calendar" aria-hidden="true"></span>
               <p class="important-dates-item-title">${_("Classes Start:")}</p>
               % if isinstance(course_start_date, string_types):
                   <span class="important-dates-item-text start-date">${course_start_date}</span>
@@ -261,7 +261,7 @@ from six import string_types
                   course_start_date = course.advertised_start or course.start
               %>
             <li class="important-dates-item">
-              <span class="icon fa fa-calendar" aria-hidden="true"></span>
+              <span class="fa fa-calendar" aria-hidden="true"></span>
               <p class="important-dates-item-title">${_("Year Created:")}</p>
                   <%
                     course_date_string = course_start_date.strftime('%Y')
@@ -277,7 +277,7 @@ from six import string_types
                   course_end_date = course.end
               %>
             <li class="important-dates-item">
-                <span class="icon fa fa-calendar" aria-hidden="true"></span>
+                <span class="fa fa-calendar" aria-hidden="true"></span>
                 <p class="important-dates-item-title">${_("Classes End:")}</p>
                   % if isinstance(course_end_date, string_types):
                       <span class="important-dates-item-text final-date">${course_end_date}</span>
@@ -292,8 +292,8 @@ from six import string_types
 
           % if course.end and not course.start_date_is_still_default:
             <li class="important-dates-item">
-                <span class="icon fa fa-calendar" aria-hidden="true"></span>
-                <p class="important-dates-item-title">${_("Length")}</p>
+                <span class="icon icon-clock" aria-hidden="true"></span>
+                <p class="important-dates-item-title">${_("Length:")}</p>
                 <%
                     course_start_date = course.advertised_start or course.start
                     course_end_date = course.end
@@ -316,14 +316,14 @@ from six import string_types
           % endif
 
           % if get_course_about_section(request, course, "effort"):
-            <li class="important-dates-item"><span class="icon fa fa-pencil" aria-hidden="true"></span><p class="important-dates-item-title">${_("Estimated Effort:")}</p><span class="important-dates-item-text effort">${get_course_about_section(request, course, "effort")}</span></li>
+            <li class="important-dates-item"><span class="icon icon-clock" aria-hidden="true"></span><p class="important-dates-item-title">${_("Estimated Effort:")}</p><span class="important-dates-item-text effort">${get_course_about_section(request, course, "effort")}</span></li>
           % endif
 
-          ##<li class="important-dates-item"><span class="icon fa fa-clock-o" aria-hidden="true"></span><p class="important-dates-item-title">${_('Course Length:')}</p><span class="important-dates-item-text course-length">${_('{number} weeks').format(number=15)}</span></li>
+          ##<li class="important-dates-item"><span class="fa fa-clock-o" aria-hidden="true"></span><p class="important-dates-item-title">${_('Course Length:')}</p><span class="important-dates-item-text course-length">${_('{number} weeks').format(number=15)}</span></li>
 
           %if course_price and (can_add_course_to_cart or is_cosmetic_price_enabled):
             <li class="important-dates-item">
-              <span class="icon fa fa-money" aria-hidden="true"></span>
+              <span class="fa fa-money" aria-hidden="true"></span>
               <p class="important-dates-item-title">${_("Price:")}</p>
               <span class="important-dates-item-text">${course_price}</span>
             </li>
@@ -332,7 +332,7 @@ from six import string_types
           % if pre_requisite_courses:
           <% prc_target = reverse('about_course', args=[unicode(pre_requisite_courses[0]['key'])]) %>
           <li class="prerequisite-course important-dates-item">
-            <span class="icon fa fa-list-ul" aria-hidden="true"></span>
+            <span class="icon icon-user" aria-hidden="true"></span>
             <p class="important-dates-item-title">${_("Prerequisites:")}</p>
             ## Multiple pre-requisite courses are not supported on frontend that's why we are pulling first element
             <span class="important-dates-item-text pre-requisite"><a href="${prc_target}">${pre_requisite_courses[0]['display']}</a></span>
@@ -346,14 +346,14 @@ from six import string_types
           </li>
           % else:
             <li class="prerequisite-course important-dates-item">
-              <span class="icon fa fa-list-ul" aria-hidden="true"></span>
-              <p class="important-dates-item-title">${_("Prerequisites")}</p>
+              <span class="icon icon-user" aria-hidden="true"></span>
+              <p class="important-dates-item-title">${_("Prerequisites:")}</p>
               <span class="important-dates-item-text pre-requisite">${_("None")}</span>
             </li>
           % endif
 
           % if get_course_about_section(request, course, "prerequisites"):
-            <li class="important-dates-item"><span class="icon fa fa-book" aria-hidden="true"></span><p class="important-dates-item-title">${_("Requirements:")}</p><span class="important-dates-item-text prerequisites">${get_course_about_section(request, course, "prerequisites")}</span></li>
+            <li class="important-dates-item"><span class="fa fa-book" aria-hidden="true"></span><p class="important-dates-item-title">${_("Requirements:")}</p><span class="important-dates-item-text prerequisites">${get_course_about_section(request, course, "prerequisites")}</span></li>
           % endif
         </ol>
         </%block>
