Add learner profile template and styling.

--- a/mitx/lms/static/sass/lms-main-v2.scss
+++ b/mitx/lms/static/sass/lms-main-v2.scss
@@ -48,3 +48,6 @@ $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 // Views
 @import 'views/account-settings';
 @import 'views/login-register';
+
+// Features
+@import 'features/learner-profile';
