--- a/mitx/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/mitx/lms/static/sass/partials/lms/theme/_variables.scss
@@ -48,6 +48,7 @@ $ice-blue-60:           rgba(236, 239, 241, 0.6);
 $ice-blue-60-solid:     #f4f5f7;
 $tomato:               	#ee2d2d;
 $danger:               	$tomato;
+$danger-light:          #f6e9eb;
 $success:               #008100;
 
 // Misc.
