--- a/mitx/lms/static/sass/shared-v2/_forms.scss
+++ b/mitx/lms/static/sass/shared-v2/_forms.scss
@@ -41,6 +41,7 @@ input[type="tel"] {
 select {
     background: $white;
     border-color: $bluey-gray !important;
+    font-size: 14px;
     height: 46px;
     outline: none;
     font-family: $font-roboto;
