--- a/mitx/lms/static/sass/course/_course-sidebar.scss
+++ b/mitx/lms/static/sass/course/_course-sidebar.scss
@@ -35,7 +35,9 @@
                 .fa {
                     color: $light-gray-blue;
                     opacity: 1;
-                    @include margin(0, $baseline*0.75, 0, 0);
+                    @include margin(0, $baseline*0.4, 0, 0);
+                    width: 28px;
+                    text-align: center;
                 }
 
                 .icon {
